--- a/resources/styles/dashboard/_layout.scss
+++ b/resources/styles/dashboard/_layout.scss
@@ -29,6 +29,12 @@ main{
         position: fixed;
         z-index: -1;
     }
+
+    #section-title{
+        color: var(--primary);
+        font-size: 2rem;
+        font-weight: 600;
+    }
 }
 
 header{
