feat: add create authoriy

--- a/resources/styles/dashboard/_layout.scss
+++ b/resources/styles/dashboard/_layout.scss
@@ -31,7 +31,7 @@ main{
     }
 
     #section-title{
-        color: var(--primary);
+        color: var(--accent);
         font-size: 2rem;
         font-weight: 600;
     }
