--- a/resources/styles/_theme.scss
+++ b/resources/styles/_theme.scss
@@ -4,4 +4,20 @@
     --primary: #F5853F;
     --secondary: #131420;
     --accent: #3faff5;
+
+    --clr-text: #131420;
+    --clr-text-muted: #272838;
+    --clr-background: #f0f2f5;
+    --clr-background-accent: #fff;
+    --clr-primary: #f5853f;
+    --clr-secondary: #3faff5;
+}
+
+[data-theme="dark"]{
+    --clr-text: #f0f2f5;
+    --clr-text-muted: #272838;
+    --clr-background: #272838;
+    --clr-background-accent: #131420;
+    --clr-primary: #f5853f;
+    --clr-secondary: #3faff5;
 }
