--- a/resources/styles/dashboard/components/_button.scss
+++ b/resources/styles/dashboard/components/_button.scss
@@ -1,7 +1,7 @@
 .btn{
     display: inline-block;
     border: 1px solid rgba(0,0,0,0.1);
-    background-color: var(--primary);
+    background-color: var(--clr-primary);
     border-radius: 5px;
     padding: 8px;
     cursor: pointer;
