--- a/resources/styles/dashboard/components/_container.scss
+++ b/resources/styles/dashboard/components/_container.scss
@@ -1,6 +1,38 @@
 .container{
-    border-radius: 15px;
-    padding: 8px;
-    box-shadow:0 4px 6px -1px rgba(0,0,0,.1), 0 2px 4px -1px rgba(0,0,0,.06);
-    background-color: var(--clr-background-accent);
+    $header-height: 50px;
+    position: relative;
+    display: flex;
+
+
+    &__header{
+        position: absolute;
+        top: 0;
+        left: 25px;
+
+        height: $header-height;
+
+        display: inline-flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: center;
+        padding: 8px 24px;
+        background-color: var(--clr-primary);
+        border-radius: 15px;
+        color: var(--clr-text-on-primary);
+        font-weight: 700;
+
+        // This trick is here for allowing use of the container without a header.
+        & + .container__body{
+            margin-top: $header-height / 2;
+            padding-top: $header-height/2 + 24px;
+        }
+    }
+    &__body{
+        width: 100%;
+
+        padding: 16px;
+        background-color: var(--clr-background-accent);
+        border-radius: 15px;
+        box-shadow:0 4px 6px -1px rgba(0,0,0,.1), 0 2px 4px -1px rgba(0,0,0,.06);
+    }
 }
