--- a/resources/styles/_theme.scss
+++ b/resources/styles/_theme.scss
@@ -1,6 +1,6 @@
 :root, .force-light-theme{
     --clr-text: #131420;
-    --clr-text-muted: #272838;
+    --clr-text-muted: #777;
     --clr-background: #f0f2f5;
     --clr-background-accent: #fff;
     --clr-primary: #f5853f;
@@ -10,7 +10,7 @@
 
 [data-theme="dark"], .force-dark-theme{
     --clr-text: #fff;
-    --clr-text-muted: #f0f2f5;
+    --clr-text-muted: #6b6b80;
     --clr-background: #272838;
     --clr-background-accent: #131420;
     --clr-primary: #f5853f;
