--- a/resources/styles/dashboard/components/_table.scss
+++ b/resources/styles/dashboard/components/_table.scss
@@ -1,25 +1,34 @@
 .table{
-    border: 2px solid rgba(0,0,0,0.1);
     border-radius: 15px;
     overflow: hidden;
 
-    .separator{
-        width: 100%;
-        height: 2px;
-        background-color: rgba(0,0,0,0.1);
-    }
-
     .header{
+        border: 0!important;
 
+        text-transform: uppercase;
+        font-size: 0.7rem!important;
+        font-weight: 600;
+        color: var(--clr-text-muted);
     }
 
     .cell{
         min-height: 40px;
+
         display: grid;
         grid-template-columns: repeat(8, 1fr);
         gap: 5px;
+        padding: 20px 10px;
         align-items: center;
-        padding: 10px;
+
+        border-top: 1px solid rgba(0,0,0,0.1);
+        font-size: 0.85rem;
+        &:nth-child(n+2) div:nth-child(1){
+            font-weight: 600;
+        }
+        .muted{
+            color: var(--clr-text-muted);
+            font-size: 0.7rem;
+        }
     }
 
     .row{
