--- a/resources/styles/_theme.scss
+++ b/resources/styles/_theme.scss
@@ -6,6 +6,9 @@
     --clr-primary: #f5853f;
     --clr-text-on-primary: var(--clr-background-accent);
     --clr-secondary: #3faff5;
+    --clr-success: #4caf50;
+    --clr-warning: #ff9800;
+    --clr-danger: #f44336;
 }
 
 [data-theme="dark"], .force-dark-theme{
