--- a/resources/styles/dashboard/components/_table.scss
+++ b/resources/styles/dashboard/components/_table.scss
@@ -22,6 +22,11 @@
 
         border-top: 1px solid rgba(0,0,0,0.1);
         font-size: 0.85rem;
+
+        .link{
+            color: var(--clr-secondary);
+        }
+
         &:nth-child(n+2) div:nth-child(1){
             font-weight: 600;
         }
@@ -33,7 +38,7 @@
 
     .row{
         &:hover{
-            background-color: rgba(0,0,0,0.1);
+            background-color: rgba(0,0,0,0.02);
         }
 
         > div{
