refactor(style): set all sizes to dynamic variables

--- a/resources/styles/_variables.scss
+++ b/resources/styles/_variables.scss
@@ -4,6 +4,7 @@
     --size-spacing-m: 16px;
     --size-spacing-l: 24px;
     --size-spacing-xl: 32px;
+    --size-spacing-2xl: 64px;
 
     --weight-font-normal: 500;
     --weight-font-bold: 600;
