--- a/resources/styles/_global.scss
+++ b/resources/styles/_global.scss
@@ -2,7 +2,7 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
+    font-weight: var(--weight-font-normal);
 }
 
 [data-theme="dark"] .remove-on-dark{
