--- a/resources/styles/dashboard/_layout.scss
+++ b/resources/styles/dashboard/_layout.scss
@@ -14,16 +14,15 @@ body{
 main{
     height: 100%;
     width: 100%;
-    padding: 12px;
+    padding: var(--size-spacing-m);
     overflow-y: hidden;
 
     #wrapper{
         display: flex;
         flex-direction: column;
-        gap: 25px;
+        gap: var(--size-spacing-l);
         height: 100%;
         border-radius: 15px;
-        padding: 12px;
         overflow-y: auto;
 
     }
@@ -35,8 +34,8 @@ main{
         flex-direction: row;
         justify-content: space-between;
 
-        padding: 16px;
-        margin-bottom: 50px;
+        padding: var(--size-spacing-m);
+        margin-bottom: var(--size-spacing-xl);
 
         .theme-switch{
             label{
@@ -57,7 +56,7 @@ main{
     #section-title{
         color: var(--clr-secondary);
         font-size: 2rem;
-        font-weight: 600;
+        font-weight: var(--weight-font-bold);
     }
 }
 
@@ -68,13 +67,13 @@ header{
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 12px;
+    padding: var(--size-spacing-m);
 
     .nav{
         width: 100%;
         height: 100%;
 
-        padding: 8px;
+        padding: var(--size-spacing-s);
 
         border-radius: 15px;
         background-color: var(--clr-background-accent);
@@ -82,20 +81,20 @@ header{
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 50px;
+        gap: var(--size-spacing-2xl);
         color: var(--clr-text);
         @include media('>small'){
-            padding: 16px;
+            padding: var(--size-spacing-m);
         }
         @include media('>medium'){
-            padding: 24px;
+            padding: var(--size-spacing-l);
         }
 
 
         ul{
             display: flex;
             flex-direction: column;
-            gap: 30px;
+            gap: var(--size-spacing-xl);
         }
 
         &__logo{
@@ -114,7 +113,7 @@ header{
             height: 40px;
             display: grid;
             grid-template-columns: 20px;
-            gap: 5px;
+            gap: var(--size-spacing-s);
 
             align-items: center;
 
