--- a/resources/styles/dashboard/components/_button.scss
+++ b/resources/styles/dashboard/components/_button.scss
@@ -3,6 +3,6 @@
     border: 1px solid rgba(0,0,0,0.1);
     background-color: var(--clr-primary);
     border-radius: 5px;
-    padding: 8px;
+    padding: var(--size-spacing-s);
     cursor: pointer;
 }
