style(authority): update create button style: add tag to main

--- a/resources/styles/_variables.scss
+++ b/resources/styles/_variables.scss
@@ -9,4 +9,6 @@
     --weight-font-normal: 500;
     --weight-font-bold: 600;
     --weight-font-bolder: 700;
+
+    --shadow-background: 0 4px 6px -1px rgba(0,0,0,.1), 0 2px 4px -1px rgba(0,0,0,.06);
 }
