style(authority): update nav spacing

--- a/resources/styles/dashboard/pages/_authorities.scss
+++ b/resources/styles/dashboard/pages/_authorities.scss
@@ -5,13 +5,9 @@
     }
 
     .authority-show__nav{
-        //display: grid;
-        //grid-template-columns: 1fr auto auto;
-        //grid-gap: var(--size-spacing-m);
-
         display: flex;
         flex-direction: row;
-        gap: var(--size-spacing-m);
+        gap: var(--size-spacing-2xl);
     }
 
     .action-panel{
