style: update btn style

--- a/resources/styles/dashboard/components/_card.scss
+++ b/resources/styles/dashboard/components/_card.scss
@@ -50,6 +50,10 @@
         }
     }
 
+    &__actions{
+        color: var(--clr-primary);
+    }
+
     &__status{
         width: 10px;
         height: 10px;
