--- a/resources/styles/dashboard/pages/_authorities.scss
+++ b/resources/styles/dashboard/pages/_authorities.scss
@@ -1,7 +1,6 @@
 #authorities{
     .create_authority_btn{
-        align-self: end;
-        box-shadow: var(--shadow-background);
+        align-self: start;
     }
 
     .authority-show__nav{
