--- a/resources/styles/dashboard/components/_container.scss
+++ b/resources/styles/dashboard/components/_container.scss
@@ -15,7 +15,15 @@
         justify-content: start;
         align-items: center;
         padding: var(--size-spacing-s) var(--size-spacing-l);
-        background-color: var(--clr-primary);
+        &--primary{
+            background-color: var(--clr-primary);
+        }
+        &--secondary{
+            background-color: var(--clr-secondary);
+        }
+        &--tertiary{
+            background-color: var(--clr-text-muted);
+        }
         border-radius: 15px;
         color: var(--clr-text-on-primary);
         font-weight: 700;
