refactor(generic certificate): renamed css tag

--- a/resources/styles/dashboard/pages/_certificates.scss
+++ b/resources/styles/dashboard/pages/_certificates.scss
@@ -1,7 +1,7 @@
 @use '/resources/styles/utils' as *;
 
 
-#authorities{
+#certificates{
     .create_authority_btn{
         align-self: start;
     }
