style: update tables and misc

--- a/resources/styles/dashboard/components/_index.scss
+++ b/resources/styles/dashboard/components/_index.scss
@@ -3,6 +3,6 @@
 @forward "form";
 @forward "container";
 @forward "breadcrumb";
-@forward "card";
 @forward "list";
 @forward "status";
+@forward "certificate-table";
