--- a/resources/styles/_global.scss
+++ b/resources/styles/_global.scss
@@ -12,7 +12,7 @@ body{
     display: none;
 }
 
-span,a,p,i{
+div,span,a,p,i{
     &.muted{
         color: var(--clr-text-muted);
         font-weight: var(--weight-font-normal);
@@ -23,12 +23,35 @@ span,a,p,i{
     &.danger{
         color: var(--clr-danger);
     }
+    &.bold{
+        font-weight: var(--weight-font-bold);
+    }
 }
 
-.vertical-separator{
-    margin: auto 0;
-    height: 90%;
-    width: 1px;
+hr.separator{
     background-color: var(--clr-text-muted);
     opacity: 0.2;
+
+    &--vertical{
+        margin: auto 0;
+        width: 1px;
+        height: 90%;
+    }
+
+    &--horizontal{
+        margin: 0 auto;
+        width: 90%;
+        height: 1px;
+    }
+}
+
+.numeric-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--size-spacing-xs);
+    :nth-child(1){
+        font-size: 2rem;
+        color: var(--clr-secondary);
+    }
 }
