--- a/resources/styles/dashboard/_layout.scss
+++ b/resources/styles/dashboard/_layout.scss
@@ -1,5 +1,7 @@
 @use '/resources/styles/utils' as *;
-
+//*{
+//    outline: 1px red solid;
+//}
 body{
     height: 100vh;
     display: grid;
@@ -14,18 +16,14 @@ body{
 main{
     height: 100%;
     width: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: var(--size-spacing-l);
     padding: var(--size-spacing-m);
-    overflow-y: hidden;
 
-    #wrapper{
-        display: flex;
-        flex-direction: column;
-        gap: var(--size-spacing-l);
-        height: 100%;
-        border-radius: 15px;
-        overflow-y: auto;
-
-    }
+    overflow-y: auto;
 
     .hero{
         width: 100%;
