--- a/resources/styles/dashboard/components/_table.scss
+++ b/resources/styles/dashboard/components/_table.scss
@@ -1,34 +1,41 @@
+@use '/resources/styles/utils' as *;
+
+
 .table{
     border-radius: 15px;
-    overflow: hidden;
-
-    .header{
-        border: 0!important;
-
-        text-transform: uppercase;
-        font-size: 0.7rem!important;
-        font-weight: 600;
-        color: var(--clr-text-muted);
-    }
-
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
     .cell{
         min-height: 40px;
 
         display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        gap: var(--size-spacing-xs);
-        padding: var(--size-spacing-m) var(--size-spacing-s);
         align-items: center;
 
-        border-top: 1px solid rgba(0,0,0,0.1);
-        font-size: 0.85rem;
-
-        &:nth-child(n+2) div:nth-child(1){
-            font-weight: 600;
+        grid-template-columns: 1fr;
+        @include media('>medium'){
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
         }
-        .muted{
-            color: var(--clr-text-muted);
-            font-size: 0.7rem;
+
+        gap: var(--size-spacing-m);
+        padding: var(--size-spacing-m) var(--size-spacing-s);
+
+        border-bottom: 1px solid rgba(0,0,0,0.1);
+        &:nth-last-child(1){
+            border-bottom: 0;
+        }
+        font-size: 0.85rem;
+    }
+
+    .header{
+        text-transform: uppercase;
+        font-size: 0.7rem!important;
+        font-weight: var(--weight-font-bold);
+        color: var(--clr-text-muted);
+
+        display: none;
+        @include media('>medium'){
+            display: grid;
         }
     }
 
@@ -36,14 +43,24 @@
         &:hover{
             background-color: rgba(0,0,0,0.02);
         }
+    }
 
-        &__actions{
-            display: flex;
-            flex-direction: row;
-            gap: var(--size-spacing-s);
-            align-items: center;
+    .col{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+        gap: var(--size-spacing-xs);
 
-            color: var(--clr-primary);
+        &__header{
+            color: var(--clr-text-muted);
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            @include media('>medium'){
+                display: none;
+            }
+        }
+
+        @include media('>medium'){
+            display: block;
         }
     }
 }
