--- a/resources/styles/dashboard/components/_container.scss
+++ b/resources/styles/dashboard/components/_container.scss
@@ -38,8 +38,8 @@
 
         // This trick is here for allowing use of the container without a header.
         & + .container__body{
-            margin-top: $header-height / 2;
-            padding-top: $header-height/2 + 24px;
+            margin-top: calc($header-height / 2);
+            padding-top: calc($header-height/2 + 24px);
         }
     }
     &__body{
@@ -49,5 +49,9 @@
         background-color: var(--clr-background-accent);
         border-radius: 15px;
         box-shadow:0 4px 6px -1px rgba(0,0,0,.1), 0 2px 4px -1px rgba(0,0,0,.06);
+
+        &--align-with-full-container{
+            margin-top: calc($header-height / 2);
+        }
     }
 }
