--- a/resources/styles/dashboard/pages/_certificates.scss
+++ b/resources/styles/dashboard/pages/_certificates.scss
@@ -19,10 +19,13 @@
         }
 
         &__actions{
+            height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
             gap: var(--size-spacing-s);
+            justify-content: space-around;
+
+            padding: 0 var(--size-spacing-m);
 
             a{
                 display: grid;
