fix(style): dark theme support for modals b7199df378c9e1cf5d6e0786d8b195f1b42c0698

--- a/resources/styles/_global.scss
+++ b/resources/styles/_global.scss
@@ -56,7 +56,7 @@ hr.separator{
     }
 }
 
-.swal2-popup{
-    background: var(--clr-background);
-    color: var(--clr-text);
+.swal2-popup, .swal2-toast{
+    background: var(--clr-background)!important;
+    color: var(--clr-text)!important;
 }
