fix(style): remove force scroll on table component

--- a/resources/styles/dashboard/components/_table.scss
+++ b/resources/styles/dashboard/components/_table.scss
@@ -5,7 +5,7 @@
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
     .cell{
         min-height: 40px;
 
