--- a/web/src/assets/styles/dashboard/components/_index.scss
+++ b/web/src/assets/styles/dashboard/components/_index.scss
@@ -1,5 +1,5 @@
 @forward "table";
-@forward "button";
+@forward "../../utils/button";
 @forward "form";
 @forward "container";
 @forward "breadcrumb";
